@@ -1,0 +1,19 @@
+-----BEGIN CERTIFICATE-----
+MIIDGzCCAgOgAwIBAgIUUdy23vq0eeKT/Na2aNSbN0IUvGcwDQYJKoZIhvcNAQEL
+BQAwNjELMAkGA1UEBhMCVVMxEzARBgNVBAgMCkNhbGlmb3JuaWExEjAQBgNVBAcM
+CUZ1bGxlcnRvbjAeFw0yNTAyMTQwNDI1MjBaFw0yNjAyMTQwNDI1MjBaMDYxCzAJ
+BgNVBAYTAlVTMRMwEQYDVQQIDApDYWxpZm9ybmlhMRIwEAYDVQQHDAlGdWxsZXJ0
+b24wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCoba0mqDUC1CBDoXUN
+W/C2itrZYso0SpTkTMVzOk/D2soK7/+M0RyaTHS38utEP2ySZM6/tCbLsLRWx0rW
+b6RpV3yWiLhEuds4YImiyu5h6LZvrZPiQCmYIpX0r3f3NyKfwNKs7nJHAPDmKZNL
+MVcdp8LrMvDYsLer022kRYzpnNLME6P1HWgmnqLBhEP7N/Pt3O834tevQJwpcIRH
+HexNuUnAVpLuYIF/lHx/y4ThIEcxXsRHgVlEMRRm+wtA6SQQQhjHS0IhwYDAgJdt
+QELojY+zTdWrno0Iv26vc1wsGpABL53VPsod9t4AlXtxfNGqhdqNF/6mOm53B/O8
+oK23AgMBAAGjITAfMB0GA1UdDgQWBBS9dkv2cvZ19KBZRmInci1Qa9oXzzANBgkq
+hkiG9w0BAQsFAAOCAQEAcpa1JnxEHXyB1VkzGizxTqOKqeAXoQAcu3qSKmWA+QBw
+FRK8yrA2YJCdLyvQN7j2oEJb4Gv+0BxT5nw5oBIAXnGxNyhc/8ND5qSl7PxxYX2x
+tIpl3j9BlUXEbXdGFcmJqMB3gHKCgi7ANlVIXi/Jtxoj4bcKfgzQYJ0ygfAxBZvB
+v0i55mR4+f5rBl5aycGcFyp08zCj34Z84Ui8257ctUl+VwDdzd6+oV2Llv7MzPLP
+t4COJeBsKxj7E0FVwVxRp1yIx03v/3vksHswJNsB31wfp66HW0/pBTsF29LM73J5
+7ATMsvePMBnwkhsi8lhutjpdiVyJNQ+yjLE1FQGlWA==
+-----END CERTIFICATE-----
