@@ -1,5 +1,6 @@
 import websockets
 import asyncio
+import ssl
 
 PORT = 7890
 
@@ -26,8 +27,10 @@ async def messaging(websocket):
         
 async def main():
     try:
-        server = await websockets.serve(messaging, "0.0.0.0", PORT)
-        print(f"WebSocket server started on ws://0.0.0.0:{PORT}")
+        ssl_context = ssl.SSLContext(ssl.PROTOCOL_TLS_SERVER)
+        ssl_context.load_cert_chain(certfile="./executables/certificate.pem", keyfile="./executables/privateKey.pem")
+        server = await websockets.serve(messaging, "0.0.0.0", PORT, ssl=ssl_context)
+        print(f"WebSocket server started on wss://0.0.0.0:{PORT}")
         await server.wait_closed()
     except Exception as e:
         print(f"Fatal server error: {e}")
